# DataSpringFlow

./: .gitignore  404.html  Dockerfile  README.md  doc_hook.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
api/: index.html
benchmarks/: bench_merkle.py
docs/: api.md  examples.md  index.md
examples/: example.py  mock_creator.py  register_private.py  register_public.py
rust/: Cargo.toml  datasets.db
rust/assets/: config.yaml
rust/dsf-api/: Cargo.toml
rust/dsf-api/src/: api.rs  lib.rs
rust/dsf-cli/: Cargo.toml
rust/dsf-cli/src/: cli.rs  main.rs  utils.rs
rust/dsf-core/: Cargo.toml
rust/dsf-core/src/: config.rs  convert_api.rs  core.rs  dag.rs  lib.rs  merkle.rs  service.rs  utils.rs
rust/dsf-core/src/backend/: mod.rs  remote_backend.rs  router.rs  sqlite_backend.rs
rust/dsf-core/tests/: dag_tests.rs  merkle_tests.rs  service_fence_tests.rs  service_tests.rs  sqlite_backend_tests.rs
rust/dsf-core/tests/common/: mod.rs
rust/dsf-frontend/: Cargo.toml  Dioxus.toml
rust/dsf-frontend/src/: main.rs
rust/dsf-frontend/src/components/: dataset_row.rs  detailed_panel.rs  linage_graph.rs  mod.rs  referror_panel.rs  sidebar.rs  status_badge.rs
rust/dsf-py/: Cargo.toml
rust/dsf-py/src/: core.rs  lib.rs  router.rs  service.rs
rust/dsf-py/src/py_bindings/: router.rs  service.rs
rust/dsf-web/: Cargo.toml
rust/dsf-web/locales/en-US/: main.ftl
rust/dsf-web/locales/zh-CN/: main.ftl
rust/dsf-web/src/: lib.rs  views.rs  web_wrapper.rs
rust/dsf-web/templates/: index.html  workspace.html
rust/dsf-web/templates/components/: dependency_dag.html  detailed_meta.html  detailed_panel.html  referrer.html  status_badge.html
rust/dsf-web/templates/layouts/: base.html
rust/file_merkle_tree/: Cargo.toml
rust/merkle/: Cargo.toml
rust/src/: backend.rs  cli.rs  config.rs  core.rs  dag.rs  lib.rs  main.rs  merkle.rs  service.rs  utils.rs
rust/src/backend/: mod.rs  remote_backend.rs  router.rs  sqlite_backend.rs
rust/src/cli/: mod.rs
rust/src/py_bindings/: core.rs  metadata.rs  mod.rs  router.rs  service.rs
rust/tests/: cli_tests.rs  dag_tests.rs  merkle_test.rs  service_tests.rs  sqlite_backend_tests.rs
rust/tests/common/: mod.rs
rustdoc/: crates.js  help.html  index.html  settings.html  src-files.js
rustdoc/dsf/: all.html  fn.main.html  index.html
rustdoc/dsf_api/: all.html  index.html
rustdoc/dsf_api/api/: index.html  sidebar-items.js  struct.DatasetMetaDto.html  struct.GraphQuery.html  struct.IdQuery.html  struct.MetaDetailDto.html  struct.ReferrerDto.html  struct.WebGraphEdge.html  struct.WebGraphNode.html  struct.WebGraphResponse.html
rustdoc/dsf_cli/: all.html  index.html  sidebar-items.js
rustdoc/dsf_cli/cli/: enum.Commands.html  enum.VerifyLevel.html  fn.run.html  index.html  sidebar-items.js  struct.Cli.html
rustdoc/dsf_cli/utils/: index.html
rustdoc/dsf_core/: all.html  index.html  sidebar-items.js
rustdoc/dsf_core/backend/: enum.BackendAddr.html  enum.BackendError.html  enum.GlobalBackend.html  enum.GlobalBackendAddr.html  fn.build_backend_auto.html  fn.capture_backtrace.html  index.html  sidebar-items.js  struct.RemoteBackend.html  struct.RemoteConfig.html  struct.ScopedId.html  struct.ScopedMetaData.html  struct.SqliteBackend.html  struct.SqliteConfig.html  struct.StackedBackend.html  struct.StackedBackendConfig.html  trait.DatasetBackend.html  type.BackendRef.html  type.BackendResult.html  type.DynBackend.html
rustdoc/dsf_core/config/: enum.InstallMode.html  index.html  sidebar-items.js  struct.AppConfig.html
rustdoc/dsf_core/convert_api/: index.html
rustdoc/dsf_core/core/: enum.DataSetBusyStatus.html  enum.DataSetStatus.html  enum.MetaDataError.html  index.html  sidebar-items.js  struct.DSFDataSet.html  struct.DataSetVerifyRes.html  struct.MetaData.html
rustdoc/dsf_core/dag/: enum.DatasetGraphError.html  index.html  sidebar-items.js  struct.DatasetGraph.html
rustdoc/dsf_core/merkle/: index.html  sidebar-items.js  struct.FileEntry.html  struct.FileEntrySnapshot.html  struct.FileMerkleTree.html  struct.MerkleTreeSnapshot.html  type.HashRes.html
rustdoc/dsf_core/service/: index.html  sidebar-items.js  struct.DSFService.html  struct.RegisterOptions.html
rustdoc/dsf_core/utils/: fn.ensure_exists.html  fn.get_username.html  fn.hashres_to_hex.html  fn.is_root.html  fn.validate_dataset_id.html  index.html  sidebar-items.js
rustdoc/dsf_web/: all.html  index.html  sidebar-items.js
rustdoc/dsf_web/views/: index.html  sidebar-items.js  struct.DatasetWorkspaceView.html  struct.DetailedMetaView.html  struct.DetailedPanelView.html  struct.IndexView.html  struct.ReferrersView.html
rustdoc/dsf_web/web_wrapper/: fn.run_server.html  index.html
rustdoc/pydsf/: all.html  index.html  sidebar-items.js
rustdoc/pydsf/core/: enum.PyDataSetBusyStatus.html  index.html  sidebar-items.js  struct.PyDSFDataSet.html  struct.PyDataSetStatus.html  struct.PyDataSetVerifyRes.html  struct.PyMetaData.html
rustdoc/pydsf/router/: index.html  sidebar-items.js  (+4 more)
rustdoc/search.index/: 01c7d10efd.js  05648f1b0b.js  0907276d4e.js  09e38c7adc.js  0b1dbfb3f1.js  0de8893e6c.js  0f21d612fd.js  0f75911f1c.js  15dfc99b54.js  16eb9e9524.js  1767994b65.js  1d6493c641.js  1f48233c7a.js  265ef7d277.js  274fc39f8f.js  275ce06380.js  2aa7afbb19.js  2c37ab6b06.js  2c99f4e0e5.js  2dd01ba7eb.js  3258f26a84.js  34e6e1dbaa.js  37a71262bc.js  3940ebd3d4.js  3a261c69f8.js  3d7d2e499b.js  3da91246eb.js  4451123b34.js  47cee5846b.js  543efe16d3.js  55b192df8c.js  581d56e0f4.js  5ca38bb57e.js  64c203847a.js  6c42506f8a.js  6e6df428fe.js  74807a0c8d.js  77da08d437.js  78ad2863f4.js  793dcb4362.js  (+4 more)
scripts/: cleanup_dsf.sh  install_payload.sh  release.sh
search/: search_index.json
src/dataspringflow/: __init__.py  dataspringflow_rs.pyi  factory.py  protocols.py
src/pydsf/: __init__.py  pydsf.pyi
tests/: test_bindings.py  test_dag.py  test_dataset.py  test_fence.py  test_file_merkle.py  test_metadata.py  test_registry.py  test_service.py
(+104 files in other folders)
