[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataspringflow"
version = "0.1.0"
description = "Deep learning dataset management tool"
authors = [{ name = "flyingbucket" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["pyyaml", "joblib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src", "tests"]
exclude = ["*/.venv/*", "build/*", "dist/*"]
select = ["E", "F", "W", "C", "B"]
ignore = ["E203"]
target-version = "py37"

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S"]


[tool.pyright]
include = ["src"]
pythonVersion = "3.7"
typeCheckingMode = "strict"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["dataspringflow"]
src_paths = ["src"]
