[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "dataspringflow"
version = "0.1.0"
description = "Deep learning dataset management tool"
authors = [{ name = "flyingbucket" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

# maturin config
[tool.maturin]
manifest-path = "rust/dsf-py/Cargo.toml" # rust project path
python-source = "src"
module-name = "pydsf"
