[package]
name = "dataspringflow-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "dataspringflow_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dsf"
path = "src/bin/dsf.rs"
required-features = ["cli"]

[features]
default = []
py_bindings = ["dep:pyo3"]
cli = ["dep:clap", "dep:dialoguer"]

[[test]]
name = "cli_tests"
required-features = ["cli"]

[dependencies]
pyo3 = { version = "0.29.0", optional = true, features = [
  "extension-module",
  "abi3-py39",
] }
# pyo3-stub-gen = "0.20"
walkdir = "2"
rayon = "1.12"
blake3 = { version = "1.8", features = ["traits-preview", "rayon", "mmap"] }
thiserror = "2"
directories = "6"

# sqlite
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.34.0"

# serielize
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dirs = "6"

# cli
colored = "3"
strum = { version = "0.28", features = ["derive"] }
libc = "0.2"
anyhow = "1"                                                     # CLI optional deps
clap = { version = "4", features = ["derive"], optional = true }
dialoguer = { version = "0.12", optional = true }
whoami = "2.1.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.0"
predicates = "3.0" # 用于字符串正则和断言匹配
assert_fs = "1.0"  # 临时沙盒文件系统
