[workspace]
resolver = "2"
members = ["dsf-core", "dsf-cli", "dsf-py", "dsf-api", "dsf-web"]

[workspace.package]
version = "0.2.1"
edition = "2024"
authors = ["flyingbucket"]

[profile.release]
debug = 1

[workspace.dependencies]
dsf-core = { path = "dsf-core" }
dsf-web = { path = "dsf-web" }
dsf-api = { path = "dsf-api" }

# 公共核心依赖
walkdir = "2"
rayon = "1.12"
blake3 = { version = "1.8", features = ["traits-preview", "rayon", "mmap"] }
thiserror = "2"
directories = "6"
dirs = "6"
whoami = "2.1.2"
libc = "0.2"
colored = "3"
anyhow = "1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
bincode = "1"

# 数据库
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.34.0", features = ["bundled"] }

# 日志
log = "0.4.33"
env_logger = "0.11.11"
backtrace = "0.3"

# Python 绑定专属
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py39"] }
pyo3-log = "0.13.4"

# CLI 
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
strum = { version = "0.28", features = ["derive"] }

# web
askama = { version = "0.16.0" }
askama_web = { version = "0.16.0", features = ["axum-0.8"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
tower-http = { version = "0.7", features = ["cors", "fs"] }
rust-embed = { version = "8.0", features = ["axum"] }
mime_guess = "2.0"

# 测试专属
tempfile = "3"
assert_cmd = "2.0"
predicates = "3.0"
assert_fs = "1.0"
