[package]
name = "dsf-core"
version.workspace = true
edition.workspace = true

[lib]
name = "dsf_core"
crate-type = ["rlib"]

[dependencies]
anyhow.workspace = true
colored.workspace = true
walkdir.workspace = true
rayon.workspace = true
blake3.workspace = true
thiserror.workspace = true
directories.workspace = true
dirs.workspace = true
libc.workspace = true
whoami.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
bincode.workspace = true

rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true

log.workspace = true
env_logger.workspace = true

[dev-dependencies]
tempfile.workspace = true
