[package]
name = "dsf-web"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dsf-core = { workspace = true }
dsf-api = { workspace = true }

askama.workspace = true
askama_web.workspace = true
tokio.workspace = true
tower-http.workspace = true
axum.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
